# mweCmakeMexCppCuda

./: .gitignore  CMakeLists.txt  Readme.md  Readme.txt  readme.md
cmake/: FindMatlab.cmake
example/: example.m  run.sh
example/matlab/: example.m
src/: addkernel.h  cudaAdd.cu  gpuaddkernel.cuh  main.cpp
src/lib/: add.cpp  add.h  cpuadd.cpp  cpuadd.h  gpuadd.cu  gpuadd.cuh
src/lib/cuda/: gpuadd.cu  gpuadd.cuh
src/mex/: addMex.cpp  mainMex.cpp
